This file documents the major additions and syntax changes between releases.

1.4.15 ...
	ENHANCEMENTS
	FIXES
	Fix check_ircd binding to wrong interface (#668778)
	Add proxy-authorization option to check_http (Marcel Kuiper - #1323230, Bryan Irvine - #2863925)
	check_icmp now increment the sequence counter in each packet
	WARNINGS
	Updated developer documentation to say that performance labels should not have an equals sign or
	single quote in the label

1.4.14 16th September 2009
	check_http has options to specify the HTTP method (#2155152)
	check_users thresholds were not working exactly as documented (>= rather than >)
	Updated tinderbox_build script to point to new tinderbox server
	check_ifoperstatus -n flag now works as expected (sf.net #1569488)
	check_ifoperstatus now supports ifType based lookup for ifIndex
	check_ups now sends a LOGOUT string (debian bug #387001)
	Extra-opts (C plugins) now allows both '#' and ';' for comments (like N::P)
	Extra-opts (C plugins) does not allow trailing comments anymore (like N::P)
	Fixed dependency issue on libtap when ./configure --enable-libtap used. Warning: will install libtap
	Fixed segfault in extra-opts under some circumstance when reading multiple sections
	Fix long options parsing in check_disk, check_dns, check_mrtg, check_mrtgtraf and check_tcp
	Add missing long options for check_nt (for use with extra-opts)
	check_icmp now reports min and max round trip time perfdata (Steve Rader)
	Fixed check_http bug where additional headers with redirection caused a segfault (Dieter Van de Walle - 2089159)
	check_disk: make autofs mount paths specified with -p before we determine the mount list (Erik Welch)
	Fixed buffer overflow in check_ntp/check_ntp_peer (#1999319, Ubuntu #291265)
	Re-bundled libtap as a built-in library (--enable-libtap): detects system library as pre-1.4.13 and does not install the built-in library anymore
	Fixed check_mrtg returning UNKNOWN instead of OK (bug #2378068)